--- a/page21.html
+++ b/page21.html
@@ -155,7 +155,7 @@
             </div>
             <div class="col-12 mt-4">
                 <p class="mbr-text mb-0 mbr-fonts-style copyright align-center display-7">
-                    © Copyright 2021 MOTECO - All Rights Reserved
+                    © Copyright <span id="cr-year"></span> MOTECO - All Rights Reserved
                 </p>
             </div>
         </div>
