--- a/page23.html
+++ b/page23.html
@@ -50,11 +50,55 @@
                     <span></span>
                 </div>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="#" data-toggle="dropdown-submenu" aria-expanded="false">Government &amp; Military</a><div class="dropdown-menu"><a class="dropdown-item text-black display-4" href="page1.html">Tactical Communication Systems</a><a class="dropdown-item text-black display-4" href="page2.html">Mobile Disaster Recovery Systems</a><a class="dropdown-item text-black display-4" href="page3.html">Counter Unmanned Threat System</a><a class="dropdown-item text-black display-4" href="page4.html">Jammers Systems</a><a class="dropdown-item text-black display-4" href="page5.html">Spectrum Monitoring Systems</a><a class="dropdown-item text-black display-4" href="page6.html">Security Operations Centers (SOC)</a><a class="dropdown-item text-black display-4" href="page7.html">Command &amp; Control&nbsp; Centers</a><a class="dropdown-item text-black display-4" href="page8.html">Infrastructure Security Systems</a><a class="dropdown-item text-black display-4" href="page9.html">TETRA Secured Communication Systems</a><a class="dropdown-item text-black display-4" href="page10.html" aria-expanded="false">Soft Secured Communication Solutions</a></div></li>
-                    <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="#" data-toggle="dropdown-submenu" aria-expanded="false">Telecom &amp; Corporate</a><div class="dropdown-menu"><a class="dropdown-item text-black display-4" href="page12.html">Turnkey Telecom Civil Works</a><a class="dropdown-item text-black display-4" href="page13.html">Power Systems (AC &amp; DC)</a><a class="dropdown-item text-black display-4" href="page14.html">In-Building Solutions (IBS)</a><a class="dropdown-item text-black display-4" href="page15.html">Mobile Telecom Systems</a><a class="dropdown-item text-black display-4" href="page16.html">Cybersecurity Services &amp; SOC</a><a class="dropdown-item text-black display-4" href="page17.html">VSAT Systems &amp; Services</a><a class="dropdown-item text-black display-4" href="page18.html">ICT Consultancy</a><a class="dropdown-item text-black display-4" href="page19.html">Operation &amp; Maintenance</a><a class="dropdown-item text-black display-4" href="page20.html">Technical Training</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">Company Info</a><div class="dropdown-menu"><a class="dropdown-item text-black display-4" href="index.html#team2-o" aria-expanded="false">Mission &amp; Vision</a><a class="dropdown-item text-black display-4" href="index.html#image3-9" aria-expanded="false">About Us</a><a class="dropdown-item text-black display-4" href="page21.html" aria-expanded="false">Message from our CEO</a><a class="dropdown-item text-black display-4" href="index.html#content1-n" aria-expanded="false">News</a><a class="dropdown-item text-black text-primary display-4" href="page23.html" aria-expanded="false">Gallery</a></div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page22.html" aria-expanded="false">Social Responsibility</a></li>
-                    <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="#" data-toggle="dropdown-submenu" aria-expanded="false">Contact</a><div class="dropdown-menu"><a class="dropdown-item text-black display-4" href="page11.html">Inquiry</a><a class="dropdown-item text-black display-4" href="index.html#contacts3-p">Contact Us</a></div></li></ul>
-                
+           <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
+                <li class="nav-item dropdown">
+                    <a class="nav-link link dropdown-toggle text-black display-4" href="#" data-toggle="dropdown-submenu" aria-expanded="false">Government &amp; Military</a>
+                    <div class="dropdown-menu"><a class="dropdown-item text-black display-4" href="page1.html">Tactical Communication Systems</a>
+                        <a class="dropdown-item text-black display-4" href="page2.html">Mobile Disaster Recovery Systems</a>
+                        <a class="dropdown-item text-black display-4" href="page3.html">Counter Unmanned Threat System</a>
+                        <a class="dropdown-item text-black display-4" href="page4.html">Jammers Systems</a>
+                        <a class="dropdown-item text-black display-4" href="page5.html">Spectrum Monitoring Systems</a>
+                        <a class="dropdown-item text-black display-4" href="page6.html">Security Operations Centers (SOC)</a>
+                        <a class="dropdown-item text-black display-4" href="page7.html">Command &amp; Control&nbsp; Centers</a>
+                        <a class="dropdown-item text-black display-4" href="page8.html">Infrastructure Security Systems</a>
+                        <a class="dropdown-item text-black display-4" href="page9.html">TETRA Secured Communication Systems</a>
+                        <a class="dropdown-item text-black display-4" href="page24.html" aria-expanded="false">Electronic Warfare</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link link dropdown-toggle text-black display-4" href="#" data-toggle="dropdown-submenu" aria-expanded="false">Telecom &amp; Corporate</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item text-black display-4" href="page12.html">Turnkey Telecom Civil Works</a>
+                        <a class="dropdown-item text-black display-4" href="page13.html">Power Systems (AC &amp; DC)</a>
+                        <a class="dropdown-item text-black display-4" href="page14.html">In-Building Solutions (IBS)</a>
+                        <a class="dropdown-item text-black display-4" href="page15.html">Mobile Telecom Systems</a>
+                        <a class="dropdown-item text-black display-4" href="page16.html">Cybersecurity Services &amp; SOC</a>
+                        <a class="dropdown-item text-black display-4" href="page17.html">VSAT Systems &amp; Services</a>
+                        <a class="dropdown-item text-black display-4" href="page18.html">ICT Consultancy</a>
+                        <a class="dropdown-item text-black display-4" href="page19.html">Operation &amp; Maintenance</a>
+                        <a class="dropdown-item text-black display-4" href="page20.html">Technical Training</a>
+                        <a class="dropdown-item text-black display-4" href="page10.html" aria-expanded="false">Soft Secured Communication Solutions</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link link dropdown-toggle text-black display-4" href="#" aria-expanded="false" data-toggle="dropdown-submenu">Company Info</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item text-black display-4" href="index.html#team2-o" aria-expanded="false">Mission &amp; Vision</a>
+                            <a class="dropdown-item text-black display-4" href="index.html#image3-9" aria-expanded="false">About Us</a>
+                            <a class="dropdown-item text-black display-4" href="page21.html" aria-expanded="false">Message from our CEO</a>
+                            <a class="dropdown-item text-black display-4" href="index.html#content1-n" aria-expanded="false">News</a>
+                            <a class="dropdown-item text-black text-primary display-4" href="page23.html" aria-expanded="false">Gallery</a>
+                        </div>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link link text-black display-4" href="page22.html" aria-expanded="false">Social Responsibility</a>
+                </li>
+                    <li class="nav-item dropdown">
+                    <a class="nav-link link dropdown-toggle text-black display-4" href="#" data-toggle="dropdown-submenu" aria-expanded="false">Contact</a>
+                    <div class="dropdown-menu"><a class="dropdown-item text-black display-4" href="page11.html">Inquiry</a>
+                    <a class="dropdown-item text-black display-4" href="index.html#contacts3-p">Contact Us</a>
+                    </div></li></ul>
                 <div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="#">عربي</a></div>
             </div>
         </div>
